--- a/projects.html
+++ b/projects.html
@@ -66,14 +66,14 @@ gallery-images:
             </div>
         </div>
         <div class="sm:grid sm:grid-cols-2 mb-5p">
-            <div class="relative h-full min-h-30 sm:min-h-50">
-                <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.cairns-cyclone-image }}" style="object-position: {{ page.cairns-cyclone-position }};" alt="{{ page.cairns-cyclone-alt }}" />
-            </div>
-            <div class="sm:pl-5p">
+            <div class="sm:pr-5p">
                 <p class="py-5p"> Located in the far north of Queensland, our site faces unique challenges, with the wet season being the most unpredictable, as well as the heat and humidity factors to contend with. </p>
                 <p class="pb-5p"> Halfway through the project, the weather took a turn for the worse, and we were hit with a cyclone followed by a year's worth of rain in just two days! We had to put the project on hold until the weather improved nearly a month later. This delayed our project timeline by nearly two months, but we got there in the end and now have an amazing product to share with the world! </p>
                 <p class="sm:hidden">The photo above shows us tying everything down before the cyclone.</p>
-                <p class="hidden sm:block">The photo to the left shows us tying everything down before the cyclone.</p>
+                <p class="hidden sm:block">The photo to the right shows us tying everything down before the cyclone.</p>
+            </div>
+            <div class="relative h-full min-h-30 sm:min-h-50">
+                <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.cairns-cyclone-image }}" style="object-position: {{ page.cairns-cyclone-position }};" alt="{{ page.cairns-cyclone-alt }}" />
             </div>
         </div>
         <div>
