--- a/sustainability.html
+++ b/sustainability.html
@@ -94,17 +94,17 @@ beehives-alt: 15 beehives at Souleuvre Viaduct, supporting local pollinators and
 <section class="max-w-screen-2xl mx-auto"> 
     <div class="px-5p pt-15p md:pt-10p 2xl:pt-5p" id="cairnssustainability">
         <p class="title-font text-2xl sm:text-4xl pb-5p"> Cairns Biodiversity Survey, Mapping, and Environmental Management Project </p>
-        <div class="sm:grid sm:grid-cols-2 gap-5 mb-5p">
+        <div class="sm:grid sm:grid-cols-2 gap-5">
             <!-- Text Content -->
-            <div class="col-span-1 sm:pr-5p">
+             <!-- Image 1 -->
+            <div class="relative h-full min-h-30 sm:min-h-50 mt-5p">
+                <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.cairns-image }}" style="object-position: {{ page.cairns-position }};" alt="{{ page.cairns-alt }}" />
+            </div>
+            <div class="col-span-1 sm:pl-5p">
                 <p class="pb-5p"> In 2021, Skypark Cairns hired two ecologists and environmental consultant interns to undertake a Biodiversity Survey, Mapping, and Environmental Management Project on site. The purpose of the survey was to explore the native species prevalent through disused walking tracks and to understand the extent of invasive species present in the area.</p>
                 <p class="pb-5p"> There are 13 bioregions recognized in Queensland, each numbered and named based on its geographical characteristics or the most common vegetation type in that area. Cairns is located in the Wet Tropics Bioregion. Throughout this area, changes in vegetation types can be observed, such as the shift from rainforests and scrubs to eucalypt woodlands and open forests. Due to the diverse range of vegetation types, there is a significant difference in species found in the area. Changes in vegetation types across Skypark Cairns are influenced by factors including elevation, rainfall, and proximity to gullies and creeks.</p>
                 <p class="pb-5p"> The survey successfully produced a list of flora and fauna species, totaling 390 species (256 flora and 134 fauna) from 612 data entries. This list includes species physically observed during the biodiversity field surveys, those captured by camera traps, and species retrieved from online databases such as WildNet and ALA.</p>
                 <p> The results of the biodiversity survey have helped our team better understand the environment we need to care for and will aid in developing future communication and interpretive content for our guests.</p>
-            </div>
-            <!-- Image 1 -->
-            <div class="relative h-full min-h-30 sm:min-h-50 mt-5p">
-                <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.cairns-image }}" style="object-position: {{ page.cairns-position }};" alt="{{ page.cairns-alt }}" />
             </div>
         </div>
     </div>
@@ -139,14 +139,13 @@ beehives-alt: 15 beehives at Souleuvre Viaduct, supporting local pollinators and
         <p class="title-font text-2xl sm:text-4xl pb-5p"> Bee Hives at Souleuvre Viaduct </p>
 
         <div class="sm:grid sm:grid-cols-2 gap-5 mb-5p">
-            <!-- Text Content -->
-            <div class="col-span-1 sm:pr-5p mb-5p">
-                <p> With the collaboration of a beekeeper, the site installed 15 beehives at the Souleuvre Viaduct. Honey bees play a crucial role in the reproduction of entomophilic plants (pollinated by insects, bees, butterflies). They contribute to nearly 80% of pollination in agriculture, providing a service valued at approximately 20 billion euros annually in Europe alone. The French honeybee death toll has skyrocketed in the past two decades, from an average of 5% of the colony per year in the 1990s to a minimum of 30% today—nearly a third of the colony every year. This decline has been widely attributed to climate change. If we lose the bees, we risk losing fruits, vegetables, and even grains. Bees are an integral part of biodiversity.</p>
-            </div>
-
             <!-- Image 1 -->
             <div class="relative h-full min-h-30 sm:min-h-50">
                 <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.beehives-image }}" style="object-position: {{ page.beehives-position }};" alt="{{ page.beehives-alt }}" />
+            </div>
+            <!-- Text Content -->
+            <div class="col-span-1 sm:pl-5p mb-5p">
+                <p> With the collaboration of a beekeeper, the site installed 15 beehives at the Souleuvre Viaduct. Honey bees play a crucial role in the reproduction of entomophilic plants (pollinated by insects, bees, butterflies). They contribute to nearly 80% of pollination in agriculture, providing a service valued at approximately 20 billion euros annually in Europe alone. The French honeybee death toll has skyrocketed in the past two decades, from an average of 5% of the colony per year in the 1990s to a minimum of 30% today—nearly a third of the colony every year. This decline has been widely attributed to climate change. If we lose the bees, we risk losing fruits, vegetables, and even grains. Bees are an integral part of biodiversity.</p>
             </div>
         </div>
     </div>
