--- a/contact.html
+++ b/contact.html
@@ -34,12 +34,12 @@ header:
 <!-----Contact Intro Section-------->
 
 <section class="max-w-screen-2xl mx-auto">
-    <div class="px-5p pt-15p sm:pt-10p 2xl:pt-5p pb-15p sm:pb-10p lg:pb-5p">
-        <div class="pb-10p">
+    <div class="px-5p pt-5p pb-5p">
+        <div class="pb-5p">
             <p class="title-font text-2xl sm:text-4xl">We look forward to hearing from you!</p>
         </div>
 
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-5p mb-10p lg:mb-5p">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-5p">
             <div class="pr-5p">
                 <p class="text-lg pb-2p">Please fill out our contact form to get in touch with us for any enquiries or requests. </p>
                 <p>For press or media enquiries, please email <a href="mailto:pr@ajhackett.com"><strong>pr@ajhackett.com</strong></a>.</p>
