--- a/experiences-aj-hackett.html
+++ b/experiences-aj-hackett.html
@@ -143,7 +143,7 @@ experience:
 ---
 
 <section class="max-w-screen-2xl mx-auto">
-  <div class="px-5p pt-15p sm:pt-10p xl:pt-5p pb-10p sm:pb-0">
+  <div class="px-5p pt-5p pb-5p sm:pb-0">
         <p class="pb-5p sm:pb-2p"> At AJ Hackett Skypark, adventure awaits around every corner! Dive into a world of excitement with our exhilarating activities designed for thrill-seekers and families alike. Whether you’re soaring through the sky on our iconic bungy jumps, experiencing the rush of our giant swings, or gliding along breathtaking ziplines, each experience offers a unique way to challenge yourself and enjoy stunning views. Explore our sky-high attractions, including the Skybridge, Skycube, and the nostalgic Walk The Plank, or engage in fun-filled activities like luge rides, adventure parks, and climbing walls. Whatever your adrenaline level, there’s something for everyone to enjoy at AJ Hackett Skypark—come and create unforgettable memories!</p>
         <p class="pb-5p sm:pb-0"> Check out each individual experience of Skypark by AJ Hackett below.</p>
   </div> 
@@ -153,7 +153,7 @@ experience:
 <!-----BG and Text-------->
 
 <section class="max-w-screen-2xl mx-auto">
-  <div class="relative mt-10p">
+  <div class="relative mt-5p">
     <div class="bg-cover bg-no-repeat"
         style="background-image: url('{{ page.quote-image }}'); height: 24rem; background-position: {{ page.quote-position }};">
       <div class="absolute inset-0 flex items-center justify-center p-5p">
@@ -172,7 +172,7 @@ experience:
 <!-----Experiences-------->
 
 <section class="max-w-screen-2xl mx-auto">
-  <div class="px-5p pb-15p lg:pb-10p">
+  <div class="px-5p pb-5p">
     {% for item in page.experience %}
     <div class="pt-15p sm:pt-10p lg:pt-5p" id="{{ item.id }}">
         <h3 class="title-font text-2xl sm:text-4xl pb-2p 2xl:pb-1p">{{ item.name }}</h3>
