--- a/pondok-santi-estate.html
+++ b/pondok-santi-estate.html
@@ -39,11 +39,11 @@ gallery-images:
 ---
 
 <section class="max-w-screen-2xl mx-auto">
-  <div class="px-5p pt-15p sm:pt-10p xl:pt-5p pb-10p sm:pb-0">
+  <div class="px-5p pt-5p pb-5p sm:pb-0">
     <div>
         <p class="pb-10p sm:pb-5p xl:pb-2p"> Set amidst the idyllic shores of Gili Trawangan, Pondok Santi Estate offers an escape from the ordinary. From our luxurious accommodations to our exquisite dining experiences, every moment is crafted to elevate your senses. Welcome to a world where serenity meets sophistication, where every detail is designed to enchant and inspire. Welcome to Pondok Santi Estate.
         </p>
-        <div class="mb-15p sm:mb-10p xl:mb-5p sm:mt-2p md:mt-0">
+        <div class="mb-5p sm:mt-2p md:mt-0">
             <a href="https://pondoksanti.com/" class="button" aria-label="Visit Pondok Santi Estate website for more information">Visit Pondok Santi Estate</a>
         </div>
     </div>
@@ -52,7 +52,7 @@ gallery-images:
 
 
 <section class="max-w-screen-2xl mx-auto">
-  <div class="px-5p pb-15p sm:pb-10p xl:pb-5p">
+  <div class="px-5p pb-5p">
     <!-- Gallery Images -->
     <div class="sm:grid sm:grid-cols-3 gap-1 w-full overflow-x-auto" id="lightgallery">
       {% for image in page.gallery-images %}
