--- a/projects.html
+++ b/projects.html
@@ -45,8 +45,8 @@ gallery-images:
 ---
 <!---------------Intro------------->
 <section class="max-w-screen-2xl mx-auto"> 
-    <div class="px-5p pt-15p sm:pt-10p xl:pt-5p pb-10p sm:pb-0">
-        <p class="pb-5p xl:pb-0"> At AJ Hackett International, we're always pushing the boundaries of adventure and striving to enhance our offerings. We're excited to share some of our latest projects that are set to elevate the Skypark experience even further. From innovative upgrades to thrilling new features, we are dedicated to continually improving our sites to ensure that every visit is unforgettable. Here’s a look at what we’ve been working on and how we’re bringing new dimensions of excitement and comfort to our adventure parks around the globe. </p>
+    <div class="px-5p pt-5p pb-5p sm:pb-0">
+        <p> At AJ Hackett International, we're always pushing the boundaries of adventure and striving to enhance our offerings. We're excited to share some of our latest projects that are set to elevate the Skypark experience even further. From innovative upgrades to thrilling new features, we are dedicated to continually improving our sites to ensure that every visit is unforgettable. Here’s a look at what we’ve been working on and how we’re bringing new dimensions of excitement and comfort to our adventure parks around the globe. </p>
     </div>
 </section>
 
@@ -54,7 +54,7 @@ gallery-images:
 
 <!---------------Skypark Cairns Roof------------->
 <section class="max-w-screen-2xl mx-auto"> 
-    <div class="px-5p pt-5p pb-15p sm:pb-10p">
+    <div class="px-5p pt-5p pb-5p">
         <p class="title-font text-2xl sm:text-4xl pb-5p">Skypark Cairns Roof </p>
         <div class="sm:grid sm:grid-cols-2 mb-5p">
             <div class="relative h-full min-h-30 sm:min-h-50">
