--- a/purpose-promise-values.html
+++ b/purpose-promise-values.html
@@ -37,12 +37,10 @@ values-image-alt: AJ Hackett smiling into the camera.
 <!-----Purpose-------->
 
 <section class="max-w-screen-2xl mx-auto">
-    <div class="px-5p pt-15p sm:pt-10p" id="purpose">
-        <div class="pb-5p">
-            <p class="title-font text-2xl sm:text-4xl"> Our Purpose </p>
-        </div>
+    <div class="px-5p pt-5p" id="purpose">
         <div class="sm:grid sm:grid-cols-2 mb-5p">
             <div class="sm:pr-5p">
+                <p class="title-font text-2xl sm:text-4xl pb-2p"> Our Purpose </p>
                 <p class="pb-5p"> Our purpose is to positively change lives and help people all over the world overcome their personal barriers by achieving something they never thought possible. </p>
             </div>
             <div class="relative h-full min-h-30 sm:min-h-50">
@@ -58,13 +56,10 @@ values-image-alt: AJ Hackett smiling into the camera.
 <!-----Promise-------->
 
 <section class="max-w-screen-2xl mx-auto">
-    <div class="px-5p pt-15p sm:pt-10p xl:pt-5p" id="promise">
-        <div class="pb-5p">
-            <p class="title-font text-2xl sm:text-4xl"> Our Promise </p>
-        </div>
-
+    <div class="px-5p" id="promise">
         <div class="sm:grid sm:grid-cols-2 mb-5p">
             <div class="sm:pr-5p">
+                <p class="title-font text-2xl sm:text-4xl pb-2p"> Our Promise </p>
                 <p class="pb-5p"> To act sustainably and be trusted for the care of our people, our customers, and the planet, while pursuing quality, creativity, and innovation in adventure tourism destinations. As a result, our promise is shifting our mindset from the inward-looking corporate visions and missions of the past to a fresh, open-minded perspective in which we can be a trusted adventure tourism operator for the future. </p>
             </div>
             <div class="relative h-full min-h-30 sm:min-h-50">
@@ -80,13 +75,10 @@ values-image-alt: AJ Hackett smiling into the camera.
 <!-----Values-------->
 
 <section class="max-w-screen-2xl mx-auto">
-    <div class="px-5p pt-15p sm:pt-10p xl:pt-5p pb-15p md:pb-10p" id="values">
-        <div class="pb-5p">
-            <p class="title-font text-2xl sm:text-4xl"> Our Values </p>
-        </div>
-
+    <div class="px-5p pt-5p pb-5p" id="values">
         <div class="sm:grid sm:grid-cols-2 mb-5p">
             <div class="sm:pr-5p pb-5p">
+                <p class="title-font text-2xl sm:text-4xl pb-2p"> Our Values </p>
                 <p class="title-font text-xl">Respect</p>
                 <p class="pb-5p"> We value the communities and the environment we share, always acting responsibly and fully committing to open and honest relationships. </p>
                 <p class="title-font text-xl">Adventure</p>
