--- a/sustainability.html
+++ b/sustainability.html
@@ -43,11 +43,11 @@ beehives-alt: 15 beehives at Souleuvre Viaduct, supporting local pollinators and
 ---
 <!---------------Intro------------->
 <section class="max-w-screen-2xl mx-auto"> 
-    <div class="px-5p pt-15p sm:pt-10p xl:pt-5p pb-10p sm:pb-0">
-            <p class="pb-5p md:pb-2p"> At AJ Hackett International, we are enhancing our framework to be more sustainable and responsible in our actions, and to better understand the consequences for living and the relationships that sustain our people and our business. Our businesses operate in a diverse society and changing environment, and we must inspire trust and be a force for good. </p>
-            <p class="pb-5p md:pb-2p"> AJ Hackett International’s promise is to act sustainably and be trusted for the care of our people, our customers, and the planet, while pursuing quality, creativity, and innovation in adventure tourism destinations. </p>
-            <p class="pb-5p md:pb-2p"> Our experiences uniquely inspire and engage people, providing education that promotes lifelong learning and conservation advocacy. </p>
-            <p class="pb-5p 2xl:pb-2p"> We are targeting carbon neutrality for all Skypark by AJ Hackett locations and other portfolio businesses well before the global push for 2030. </p>
+    <div class="px-5p pt-5p pb-5p sm:pb-0">
+            <p class="pb-2p"> At AJ Hackett International, we are enhancing our framework to be more sustainable and responsible in our actions, and to better understand the consequences for living and the relationships that sustain our people and our business. Our businesses operate in a diverse society and changing environment, and we must inspire trust and be a force for good. </p>
+            <p class="pb-2p"> AJ Hackett International’s promise is to act sustainably and be trusted for the care of our people, our customers, and the planet, while pursuing quality, creativity, and innovation in adventure tourism destinations. </p>
+            <p class="pb-2p"> Our experiences uniquely inspire and engage people, providing education that promotes lifelong learning and conservation advocacy. </p>
+            <p class="pb-2p"> We are targeting carbon neutrality for all Skypark by AJ Hackett locations and other portfolio businesses well before the global push for 2030. </p>
             <p> Check out some of the sustainability practices at AJ Hackett International: </p>
     </div>
 </section>
@@ -57,9 +57,9 @@ beehives-alt: 15 beehives at Souleuvre Viaduct, supporting local pollinators and
 
 <!---------------Pondok Sustainability------------->
 <section class="max-w-screen-2xl mx-auto"> 
-    <div class="px-5p pt-10p 2xl:pt-5p" id="pondoksustainability">
-        <p class="title-font text-2xl sm:text-4xl pb-5p"> Sustainability Initiatives at Pondok Santi Estate </p>
-        <div class="sm:grid sm:grid-cols-2 grid-rows-2 gap-5 mb-5p">
+    <div class="px-5p pt-5p" id="pondoksustainability">
+        <p class="title-font text-2xl sm:text-4xl pb-2p"> Sustainability Initiatives at Pondok Santi Estate </p>
+        <div class="sm:grid sm:grid-cols-2 grid-rows-2 gap-5">
             <!-- Text Content -->
             <div class="sm:col-span-1 sm:row-span-2 sm:pr-5p">
                 <p class="pb-5p"> At Pondok Santi Estate, we are committed to acting sustainably and preserving the serene beauty of the area. To do so, we have adopted a variety of initiatives, such as:</p>
@@ -92,8 +92,8 @@ beehives-alt: 15 beehives at Souleuvre Viaduct, supporting local pollinators and
 
 <!---------------Cairns Sustainability------------->
 <section class="max-w-screen-2xl mx-auto"> 
-    <div class="px-5p pt-15p md:pt-10p 2xl:pt-5p" id="cairnssustainability">
-        <p class="title-font text-2xl sm:text-4xl pb-5p"> Cairns Biodiversity Survey, Mapping, and Environmental Management Project </p>
+    <div class="px-5p pt-10p mb-10p" id="cairnssustainability">
+        <p class="title-font text-2xl sm:text-4xl pb-2p"> Cairns Biodiversity Survey, Mapping, and Environmental Management Project </p>
         <div class="sm:grid sm:grid-cols-2 gap-5">
             <!-- Text Content -->
              <!-- Image 1 -->
@@ -115,8 +115,8 @@ beehives-alt: 15 beehives at Souleuvre Viaduct, supporting local pollinators and
 
 <!---------------Normandie Sustainability------------->
 <section class="max-w-screen-2xl mx-auto"> 
-    <div class="px-5p pt-15p md:pt-10p 2xl:pt-5p" id="normandiesustainability">
-        <p class="title-font text-2xl sm:text-4xl pb-5p"> Normandie Natura 2000 </p>
+    <div class="px-5p mt-5p" id="normandiesustainability">
+        <p class="title-font text-2xl sm:text-4xl pb-2p"> Normandie Natura 2000 </p>
         <div class="sm:grid sm:grid-cols-2 gap-5 mb-5p">
             <!-- Text Content -->
             <div class="col-span-1 sm:pr-5p">
@@ -135,8 +135,8 @@ beehives-alt: 15 beehives at Souleuvre Viaduct, supporting local pollinators and
 
 <!---------------Beehives------------->
 <section class="max-w-screen-2xl mx-auto"> 
-    <div class="px-5p pt-10p pb-15p lg:pb-10p 2xl:pt-5p 2xl:pb-5p" id="beehives">
-        <p class="title-font text-2xl sm:text-4xl pb-5p"> Bee Hives at Souleuvre Viaduct </p>
+    <div class="px-5p pt-5p pb-5p" id="beehives">
+        <p class="title-font text-2xl sm:text-4xl pb-2p"> Bee Hives at Souleuvre Viaduct </p>
 
         <div class="sm:grid sm:grid-cols-2 gap-5 mb-5p">
             <!-- Image 1 -->
