--- a/accessibility.html
+++ b/accessibility.html
@@ -31,7 +31,7 @@ gallery-images:
 ---
 
 <section class="max-w-screen-2xl mx-auto">
-  <div class="px-5p pt-15p sm:pt-10p xl:pt-5p">
+  <div class="px-5p pt-5p">
     <div class="pb-5p">
         <p class="pb-5p md:pb-2p"> Our company has a long history of catering to visitors with special needs. The majority of the activities we offer do not rely on the physical or mental ability of the individual. We have guided people with various disabilities through our activity experiences. For example, it’s common to see individuals bungy jumping in their wheelchairs or being accompanied on a zipline and other activities at our sites. </p>
         <p class="pb-5p md:pb-2p"> This brings us to the concept of personal challenge learning and what it means to push oneself just a little further and outside their comfort zone. Our teams are specialists at guiding people through breaking their barriers, whether it’s a child navigating a zipline park or a parent’s first bungy jump. We also specialize in team bonding events, school trips, and behind-the-scenes tours where people can learn about the technical aspects of our industry. </p>
@@ -42,7 +42,7 @@ gallery-images:
 
 
 <section class="max-w-screen-2xl mx-auto">
-  <div class="px-5p pb-15p lg:pb-10p xl:pb-5p">
+  <div class="px-5p pb-5p">
     <!-- Gallery Images -->
     <div class="grid grid-cols-2 gap-1 w-full overflow-x-auto" id="lightgallery">
       {% for image in page.gallery-images %}
