--- a/community.html
+++ b/community.html
@@ -27,7 +27,7 @@ header:
 
 <!---------------Intro------------->
 <section class="max-w-screen-2xl mx-auto"> 
-  <div class="px-5p pt-15p sm:pt-10p xl:pt-5p pb-10p sm:pb-0">
+  <div class="px-5p pt-5p pb-5p sm:pb-0">
         <p class="pb-5p"> At AJ Hackett International, our commitment to community extends beyond thrilling adventures and breathtaking experiences. We deeply value the communities where we are located, recognizing the vital role they play in our success and mission. Our community-focused initiatives aim to foster meaningful connections, support local causes, and give back in impactful ways. From hosting charity events and participating in local projects to creating sustainable practices that benefit surrounding areas, we strive to make a positive difference. Discover how we are actively engaging with and contributing to the communities that inspire and support us. </p>
   </div>
 </section>
@@ -35,8 +35,8 @@ header:
 
 <!---------------Events------------->
 <section class="max-w-screen-2xl mx-auto"> 
-  <div class="px-5p py-10p 2xl:py-5p" id="events">
-    <p class="title-font text-2xl sm:text-4xl pb-10p sm:pb-5p"> Events </p>
+  <div class="px-5p pb-2p" id="events">
+    <p class="title-font text-2xl sm:text-4xl pb-2p"> Events </p>
 
     <p class="title-font text-xl sm:text-2xl pb-2p"> Jump For Hope </p>
 
@@ -46,7 +46,7 @@ header:
     <p class="title-font text-xl sm:text-2xl pb-2p"> Crazy Jump Day </p>
 
     <p class="pb-2p"> In December 2017, Macau Tower hosted the annual Crazy Jump Day, organized by Skypark Macau Tower and sponsored by AirAsia, one of the world's leading low-cost airlines. The event, themed "AirAsia Destinations," featured 23 participants from Malaysia, Singapore, Indonesia, the Philippines, Australia, and China, who were selected through a social media contest. Participants showcased their creativity and storytelling skills through costumes that represented AirAsia's extensive network of over 130 destinations.</p>
-    <p class="pb-10p md:pb-5p xl:pb-0">The event was inaugurated by key figures including AJ Hackett, Founder; Adam Lichtenstein, General Manager of Skypark Macau Tower; and Tan Sri Rafidah Aziz, AirAsia X Malaysia Chairman, along with other representatives from Macau Tower, AirAsia, and various organizations. The aim of Macau Tower Crazy Jump Day was to attract more visitors to Macau and Macau Tower, offering them the chance to experience the thrill of the world’s highest commercial bungy jump and skywalk.</p>
+    <p>The event was inaugurated by key figures including AJ Hackett, Founder; Adam Lichtenstein, General Manager of Skypark Macau Tower; and Tan Sri Rafidah Aziz, AirAsia X Malaysia Chairman, along with other representatives from Macau Tower, AirAsia, and various organizations. The aim of Macau Tower Crazy Jump Day was to attract more visitors to Macau and Macau Tower, offering them the chance to experience the thrill of the world’s highest commercial bungy jump and skywalk.</p>
   </div>
 </section>
 
@@ -54,8 +54,8 @@ header:
 
 <!---------------Giving Back------------->
 <section class="max-w-screen-2xl mx-auto"> 
-  <div class="px-5p pb-15p xl:pb-10p" id="givingback">
-    <p class="title-font text-2xl sm:text-4xl pb-5p"> Giving Back </p>
+  <div class="px-5p pb-5p" id="givingback">
+    <p class="title-font text-2xl sm:text-4xl pb-2p"> Giving Back </p>
     <p> At Pondok Santi Estate, the team is cultivating a “food forest.” This project is expected to produce such an abundance of food that we will be able to donate fruits and vegetables to local communities on Gili Trawangan and in Lombok.</p>
   </div>
 </section>
