--- a/meet-aj-hackett.html
+++ b/meet-aj-hackett.html
@@ -39,8 +39,8 @@ quote-image-position: 70% 10%
 <!-----Intro Section and Text-------->
 
 <section class="max-w-screen-2xl mx-auto">
-    <div class="px-5p pt-15p sm:pt-10p pb-10p sm:pb-0">
-        <div class="pb-10p">
+    <div class="px-5p pt-5p pb-10p sm:pb-0">
+        <div class="pb-5p">
             <p class="title-font text-2xl sm:text-4xl"> AJ Hackett is the kiwi innovator who built a business empire on adrenaline and adventure. </p>
         </div>
 
@@ -84,7 +84,7 @@ quote-image-position: 70% 10%
 <!-----BG and Text-------->
 
 <section class="max-w-screen-2xl mx-auto">
-    <div class="mt-15p sm:mt-20p md:mt-15p relative">
+    <div class="mt-5p relative">
         <div class="bg-cover bg-no-repeat" 
             style="background-image: url('{{ page.quote-image }}'); height: 24rem; background-position: {{ page.quote-image-position }};">
             <div class="absolute inset-0 flex items-center justify-center p-5p">
@@ -102,8 +102,8 @@ quote-image-position: 70% 10%
 
 <!-----Meet AJ Hackett with video-------->
 <section class="max-w-screen-2xl mx-auto">
-    <div class="px-5p grid grid-cols-1 gap-y-5 pt-15p md:pt-10p pb-15p lg:pb-10p">
-        <div class="col-span-full pb-5p">
+    <div class="px-5p grid grid-cols-1 gap-y-5 pt-5p lg:pb-10p">
+        <div class="col-span-full">
             <p class="title-font text-2xl sm:text-4xl"> Meet AJ Hackett </p>
         </div>
 
