--- a/safety-management.html
+++ b/safety-management.html
@@ -26,8 +26,8 @@ header:
 ---
 
 <section class="max-w-screen-2xl mx-auto">
-  <div class="px-5p pt-15p sm:pt-10p 2xl:pt-5p pb-15p sm:pb-10p">
-    <div class="pb-10p 2xl:pb-5p">
+  <div class="px-5p pt-5p pb-5p">
+    <div class="pb-5p">
         <p class="title-font text-2xl sm:text-4xl"> AJ Hackett International is committed to effectively managing health, safety, and welfare for all of our stakeholders. </p>
     </div>
 
