--- a/timeline.html
+++ b/timeline.html
@@ -112,8 +112,8 @@ timeline:
 
 
 <section class="max-w-screen-2xl mx-auto"> 
-  <div class="px-5p grid grid-cols-12 py-15p sm:py-10p gap-5">
-    <div class="col-span-full pb-5p">
+  <div class="px-5p grid grid-cols-12 py-5p gap-5">
+    <div class="col-span-full pb-2p">
         <p class="title-font text-2xl sm:text-4xl">The Timeline of AJ Hackett International</p>
     </div>
     <div class="col-span-full">
