--- a/community.html
+++ b/community.html
@@ -23,6 +23,21 @@ header:
    label: Community event at Skypark Cairns with people chatting and enjoying various activities together.
    title: Community
    text: "Rooted in Community: Engaging and Giving Back"
+crazy-jump-image-1: /images/aj-hackett-bungy-eiffel-tower-paris-france.png
+crazy-jump-image-1-position:
+crazy-jump-image-1-alt:
+crazy-jump-image-2: /images/aj-hackett-bungy-eiffel-tower-paris-france.png
+crazy-jump-image-2-position:
+crazy-jump-image-2-alt:
+hope-image-1: /images/aj-hackett-bungy-eiffel-tower-paris-france.png
+hope-image-1-position:
+hope-image-1-alt:
+hope-image-2: /images/aj-hackett-bungy-eiffel-tower-paris-france.png
+hope-image-2-position:
+hope-image-2-alt:
+pondok: /images/aj-hackett-bungy-eiffel-tower-paris-france.png
+pondok-position:
+pondok-alt:
 ---
 
 <!---------------Intro------------->
@@ -36,17 +51,26 @@ header:
 <!---------------Events------------->
 <section class="max-w-screen-2xl mx-auto"> 
   <div class="px-5p pb-2p" id="events">
-    <p class="title-font text-2xl sm:text-4xl pb-2p"> Events </p>
-
-    <p class="title-font text-xl sm:text-2xl pb-2p"> Jump For Hope </p>
-
-    <p class="pb-2p"> Jump for Hope is a brand platform for Skypark by AJ Hackett dedicated to raising funds and awareness for charities. Typically a single-day event, Jump for Hope focuses on supporting a chosen charity. In Australia, for instance, we selected bushfire relief for wildlife in 2020 and partnered with The Rescue Collective. During this event, we donated A$50 (HKD$255) from every bungy and giant swing at Skypark Cairns. Additional fundraising activities included raffles, donation cups at reception and the cafe, and selling charity merchandise.</p>
-    <p class="pb-10p sm:pb-5p">These events allowed us to engage with a new customer segment and make a meaningful impact in our community. The funds raised for The Rescue Collective were used to help save Australia’s severely impacted koala population. It also provided a fantastic opportunity for the charity to join the event, educate our customers about their vital work, and create a connection to wildlife conservation through brochures, wildlife exhibits, and entertaining activities for children.</p>
+    <p class="title-font text-2xl sm:text-4xl pb-5p"> Events </p>
 
     <p class="title-font text-xl sm:text-2xl pb-2p"> Crazy Jump Day </p>
-
-    <p class="pb-2p"> In December 2017, Macau Tower hosted the annual Crazy Jump Day, organized by Skypark Macau Tower and sponsored by AirAsia, one of the world's leading low-cost airlines. The event, themed "AirAsia Destinations," featured 23 participants from Malaysia, Singapore, Indonesia, the Philippines, Australia, and China, who were selected through a social media contest. Participants showcased their creativity and storytelling skills through costumes that represented AirAsia's extensive network of over 130 destinations.</p>
-    <p>The event was inaugurated by key figures including AJ Hackett, Founder; Adam Lichtenstein, General Manager of Skypark Macau Tower; and Tan Sri Rafidah Aziz, AirAsia X Malaysia Chairman, along with other representatives from Macau Tower, AirAsia, and various organizations. The aim of Macau Tower Crazy Jump Day was to attract more visitors to Macau and Macau Tower, offering them the chance to experience the thrill of the world’s highest commercial bungy jump and skywalk.</p>
+    <div class="sm:grid sm:grid-cols-2 gap-5">
+      <!-- Text Content -->
+       <!-- Image 1 -->
+      <div class="relative h-full min-h-30 sm:min-h-50">
+          <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.crazy-jump-image-1 }}" style="object-position: {{ page.crazy-jump-image-1-position }};" alt="{{ page.crazy-jump-image-1-alt }}" />
+      </div>
+      <div class="col-span-1">
+        <p> In December 2017, Macau Tower hosted the annual Crazy Jump Day, organized by Skypark Macau Tower and sponsored by AirAsia, one of the world's leading low-cost airlines. The event, themed "AirAsia Destinations," featured 23 participants from Malaysia, Singapore, Indonesia, the Philippines, Australia, and China, who were selected through a social media contest. Participants showcased their creativity and storytelling skills through costumes that represented AirAsia's extensive network of over 130 destinations.</p>
+      </div>
+      <div class="col-span-1 sm:pr-5p">
+        <p> The event was inaugurated by key figures including AJ Hackett, Founder; Adam Lichtenstein, General Manager of Skypark Macau Tower; and Tan Sri Rafidah Aziz, AirAsia X Malaysia Chairman, along with other representatives from Macau Tower, AirAsia, and various organizations. The aim of Macau Tower Crazy Jump Day was to attract more visitors to Macau and Macau Tower, offering them the chance to experience the thrill of the world’s highest commercial bungy jump and skywalk.</p>
+      </div>
+      <!-- Image 2 -->
+      <div class="relative h-full min-h-30 sm:min-h-50">
+        <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.crazy-jump-image-2 }}" style="object-position: {{ page.crazy-jump-image-2-position }};" alt="{{ page.crazy-jump-image-2-alt }}" />
+    </div>
+    </div>
   </div>
 </section>
 
@@ -55,7 +79,42 @@ header:
 <!---------------Giving Back------------->
 <section class="max-w-screen-2xl mx-auto"> 
   <div class="px-5p pb-5p" id="givingback">
-    <p class="title-font text-2xl sm:text-4xl pb-2p"> Giving Back </p>
-    <p> At Pondok Santi Estate, the team is cultivating a “food forest.” This project is expected to produce such an abundance of food that we will be able to donate fruits and vegetables to local communities on Gili Trawangan and in Lombok.</p>
+    <p class="title-font text-2xl sm:text-4xl pb-5p pt-5p"> Giving Back </p>
+
+
+    <p class="title-font text-xl sm:text-2xl pb-2p"> Jump For Hope </p>
+
+
+    <div class="sm:grid sm:grid-cols-2 gap-5">
+      <!-- Text Content -->
+       <!-- Image 1 -->
+      <div class="relative h-full min-h-30 sm:min-h-50">
+          <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.hope-image-1 }}" style="object-position: {{ page.hope-image-1-position }};" alt="{{ page.hope-image-1-alt }}"/>
+      </div>
+      <div class="col-span-1">
+        <p>Jump for Hope is a brand platform for Skypark by AJ Hackett dedicated to raising funds and awareness for charities. Typically a single-day event, Jump for Hope focuses on supporting a chosen charity. In Australia, for instance, we selected bushfire relief for wildlife in 2020 and partnered with The Rescue Collective. During this event, we donated A$50 (HKD$255) from every bungy and giant swing at Skypark Cairns. Additional fundraising activities included raffles, donation cups at reception and the cafe, and selling charity merchandise.</p>
+      </div>
+      <div class="col-span-1 sm:pr-5p">
+        <p>These events allowed us to engage with a new customer segment and make a meaningful impact in our community. The funds raised for The Rescue Collective were used to help save Australia’s severely impacted koala population. It also provided a fantastic opportunity for the charity to join the event, educate our customers about their vital work, and create a connection to wildlife conservation through brochures, wildlife exhibits, and entertaining activities for children.</p>
+      </div>
+      <!-- Image 2 -->
+      <div class="relative h-full min-h-30 sm:min-h-50">
+        <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.hope-image-2 }}" style="object-position: {{ page.hope-image-2-position }};" alt="{{ page.hope-image-2-alt }}" />
+      </div>
+    </div>
+
+
+    <p class="title-font text-xl sm:text-2xl pb-2p pt-5p"> Food Forest </p>
+
+    <div class="sm:grid sm:grid-cols-2 gap-5">
+      <!-- Text Content -->
+       <!-- Image 1 -->
+      <div class="relative h-full min-h-30 sm:min-h-50">
+          <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.pondok }}" style="object-position: {{ page.pondok-position }};" alt="{{ page.pondok-alt }}"/>
+      </div>
+      <div class="col-span-1">
+        <p>At Pondok Santi Estate, the team is cultivating a “food forest.” This project is expected to produce such an abundance of food that we will be able to donate fruits and vegetables to local communities on Gili Trawangan and in Lombok.</p>
+      </div>
+    </div>
   </div>
 </section>
