--- a/skypark-aj-hackett.html
+++ b/skypark-aj-hackett.html
@@ -24,8 +24,8 @@ header:
  - image: /images/skypark-aj-hackett-international-banner-image.jpg
    position: 20% 50%
    label: A woman captured mid-air in a bungy jump, with the photo taken from the vantage point where she leaped off.
-   title: Skypark
-   text: Experience Unforgettable Thrills
+   title: Skypark by AJ Hackett
+   text: Enter a World Without Boundaries
 site:
  - location: Cairns
    id: cairns
@@ -204,7 +204,7 @@ site:
 
         <!-- Visit the site button -->
         <div class="mb-5p mt-2p">
-            <a href="{{ item.url }}" class="button" aria-label="{{ item.url-alt }}">Visit the site</a>
+          <a href="{{ item.url }}" class="button" aria-label="{{ item.url-alt }}" target="_blank" rel="noopener noreferrer">Visit the site</a>
         </div>
       </div>
     {% endfor %}
