--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -21,7 +21,7 @@ header:
  - image: /images/meet-the-team-aj-hackett-international-banner.png
    position: 50% 50%
    label: AJ Hackett preparing for a bungy jump with the team gathered around him.
-   title: Meet the team
+   title: Meet our team
    text: The Faces Driving Our Global Adventure
 people:
  - name: AJ Hackett
