--- a/purpose-promise-values.html
+++ b/purpose-promise-values.html
@@ -75,7 +75,7 @@ values-image-alt: AJ Hackett smiling into the camera.
 <!-----Values-------->
 
 <section class="max-w-screen-2xl mx-auto">
-    <div class="px-5p pt-5p pb-5p" id="values">
+    <div class="px-5p pb-5p" id="values">
         <div class="sm:grid sm:grid-cols-2 mb-5p">
             <div class="sm:pr-5p pb-5p">
                 <p class="title-font text-2xl sm:text-4xl pb-2p"> Our Values </p>
